# LagrangianIcingCode

./: .gitignore  README.md
DistributionCPP/: 404.inp  BucketPlotter.py  CMakeLists.txt  CloudPlotter.py  DRIVE.sh  DRIVER.sh  IcePlotter.py  IcingDriver.cpp  Makefile  PLOT3D.cc  PLOT3D.h  PLOT3Ddriver.cc  RUNS.list  findAll.cpp  findAll.h
DistributionCPP/Airfoil/: Airfoil.cpp  Airfoil.h
DistributionCPP/AutoGridGen/: autoGridGen.cpp  autoGridGen.h
DistributionCPP/Cloud/: Cloud.cpp  Cloud.h  ParcelScalars.h  State.cpp  State.h  calcImpingementLimits.cpp  calcImpingementLimits.h
DistributionCPP/DAKOTA/: ICE.in  MeshFlowIce.sh  plotPCESurf.py
DistributionCPP/DAKOTA/templatedir/: DRIVE.sh
DistributionCPP/Example_R_100em6/: Beta.out  BetaBins.out  CloudCELLX.out  CloudCELLY.out  CloudX.out  CloudY.out  ExampleR100em6.eps
DistributionCPP/Example_R_10em6/: #CloudPlotter.py#  Beta.out  BetaBins.out  CloudCELLX.out  CloudCELLY.out  CloudPlotter.py  CloudX.out  CloudY.out  ExampleR10em6.eps
DistributionCPP/GMRES/: shellarch  shellarch_ex
DistributionCPP/Grid/: FluidScalars.h  MESH.P3D  PLOT3D.cc  PLOT3D.h  heatflux
DistributionCPP/InputData/: #Input.dat#  InputDriver.cpp  Makefile  inputReadTest  readInputParams.cpp  readInputParams.h
DistributionCPP/MVD111/: BatchSubmitter.py  Beta1.out  Beta14.out  Beta16.out  Beta18.out  Beta19.out  Beta2.out  Beta20.out  Beta22.out  Beta25.out  Beta26.out  Beta27.out  Beta3.out  Beta4.out  Beta5.out  Beta6.out  Beta9.out  BetaPlotter.py  S1.out  S10.out  S11.out  S12.out  S13.out  S14.out  S16.out  S17.out  S19.out  S2.out  S20.out  S23.out  S25.out  S26.out  S27.out  S4.out  S5.out  S6.out  S7.out  S8.out  S9.out
DistributionCPP/MVD154/: BatchSubmitter.py
DistributionCPP/MVD236/: BatchSubmitter.py
DistributionCPP/MVD52/: BatchSubmitter.py
DistributionCPP/QuadTree/: Bucket.cpp  Bucket.cpp~  Bucket.h  BucketDriver.cpp  Makefile  Makefile~  foo
DistributionCPP/QuadTreeCustom/: Bucket.cpp  Bucket.h  Bucket.h~  BucketDriver.cpp  BucketPlotter.py  Makefile
DistributionCPP/RBFInterpolation/: 2Dplot.eps  2Dplot.py  Makefile  RBFInterpDriver.cpp  RBFInterpolant.cpp  RBFInterpolant.h  Xgrid.out  Ygrid.out  Zgrid.out
DistributionCPP/ThermoEqns/: EnergyBalance.m  IntegrateEnergyEqn.m  MassBalance.m  NewtonKrylovIteration.m  SolveThermoForIceRate.m  ThermoEqns.cpp  ThermoEqns.h  ThermoEqns.m  heatflux  readSkinFrictionCoeff.cpp  readSkinFrictionCoeff.h  readThermoFiles.cpp  readThermoFiles.h  rk4.m
(+2360 files in other folders)
